--- a/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/livro.html
+++ b/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/livro.html
@@ -8,7 +8,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body bgcolor="lightgray">
+<body>
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<strong>Livro</strong>
@@ -40,8 +40,8 @@
 							
 							<td>
 								<div class="btn-group pull-right">
-							   		<a class="btn btn-sm btn-primary" th:href="@{/livro/edit/{id}(id=${livro.id})}" >Editar</a>
-							   		<a class="delete btn btn-sm btn-danger" th:href="@{/livro/delete/{id}(id=${livro.id})}">Excluir</a>
+							   		<a class="btn btn-sm btn-warning" th:href="@{/livro/edit/{id}(id=${livro.id})}" ><b>Editar</b></a>
+							   		<a class="delete btn btn-sm btn-danger" th:href="@{/livro/delete/{id}(id=${livro.id})}"><b>Excluir</b></a>
 							   </div>
 							</td>
 						</tr>
@@ -50,7 +50,8 @@
 			</div>
 		</div>
 		<div class="panel-footer">
-			<a class="btn btn-sm btn-success" th:href="@{/livro/add/}" >Adicionar</a>
+			<a class="btn btn-sm btn-info" th:href="@{/livro/add/}" ><b>Adicionar</b></a>
+		    <a class="btn btn-sm btn-default" th:href="@{/menu/}" ><b>Menu Principal</b></a>
 		</div>
 	</div>
 </body>
