--- a/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/autorAdd.html
+++ b/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/autorAdd.html
@@ -7,13 +7,27 @@
 	<title>Cadastro de Autor</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+
+ <style type="text/css">
+      #Imagem{ 
+    
+    	 background: url('https://images8.alphacoders.com/379/379448.jpg') no-repeat; 
+    	right:auto;
+    	left:auto;
+    	heigth:auto;
+    	width:auto;
+    	background-size: auto;
+      }
+    </style>
 </head>
-<body bgcolor="lightgray">
+<body >
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<strong>Cadastro de Autor</strong>
 		</div>
-		<div class="panel-body">
+		<div class="panel-body" id="Imagem">
 			<form class="form-horizontal" th:object="${autor}" th:action="@{/autor/save}" method="POST" style="margin: 10px">
 				<div class="form-group">
  					<fieldset>
@@ -27,6 +41,7 @@
 						
 						<div class="form-group row">
 						    <div class="col-md-1">
+						         <label>Registro Autor</label>
 						        <input type="text" class="form-control input-sm" id="id" th:field="*{id}" readOnly="readonly"/>
 						    </div>
 						 </div>
@@ -34,23 +49,47 @@
 						<div class="form-group row">                                                          
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('nome')}? 'has-error'">
 							    <label>Nome do Autor</label>
-							    <input type="text" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus"  maxlength="50"/>
+							    <input type="text" style="text-transform: capitalize;" pattern="(\\b[A-zÀ-ú']{2,40}\\b)\\s*){2,}$" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus" required="required" placeholder="Informe o Nome do Autor..."  minlength="5"  maxlength="50"/>
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:AaBbCc...</i></font>
+							       <script type="text/javascript">
+							          $(function(){
+							    	     $("#nome").focusout(function(){
+							    	         var quebra = $(this).val().trim().split(/\s{1,}/);
+							    	        
+							    	           for(var i in quebra){
+							    	               quebra[i] = quebra[i].substr(0, 1).toUpperCase() + quebra[i].substring(1, quebra[i].length); 
+							    	           }
+							    	        
+							    	            var nome = "";
+							    	            for(var i in quebra)
+							    	              nome = nome + ' ' + quebra[i];
+							    	        
+							    	             $(this).val(nome.trim());
+							    	         });
+							    	      });
+							      </script>
+							
 							</div>
 						</div>
 						
 						<div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('dtnasc')}? 'has-error'">
 								<label>Data de Nascimento</label> 
-								<input type="text" class="form-control input-sm" th:field="*{dtnasc}" autofocus="autofocus" maxlength="50" />
+								<input placeholder="Informe a Data de Nascimento do Autor..."  type="date" class="form-control input-sm" th:field="*{dtnasc}" autofocus="autofocus"  required="required" />
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:123456789</i></font> 
+							    <script type="text/javascript">
+                                   $("#dtnasc").mask("00/00/0000");
+                                </script>
 							</div>
 						</div>
 				    </fieldset>
 				</div>
 				
 				<div class="form-group row">
-					<button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-					<a th:href="@{/autor/}" class="btn btn-sm btn-default">Cancelar</a>
-				</div>
+					<button type="submit" class="btn btn-sm btn-primary"><b>Salvar</b></button>
+			        <a th:href="@{/autor/}" class="btn btn-sm btn-default"><b>Cancelar</b></a>
+			  </div>
+			 
 			</form>
 		</div>
 	</div>
