--- a/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/emprestimoAdd.html
+++ b/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/emprestimoAdd.html
@@ -7,13 +7,27 @@
 	<title>Cadastro de Empréstimo</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    
+     <style type="text/css">
+      #Imagem{ 
+    
+    	 background: url('https://images8.alphacoders.com/379/379448.jpg') no-repeat; 
+    	right:auto;
+    	left:auto;
+    	heigth:auto;
+    	width:auto;
+    	background-size: auto;
+      }
+    </style>
 </head>
-<body bgcolor="lightgray">
+<body >
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<strong>Cadastro de Empréstimo</strong>
 		</div>
-		<div class="panel-body">
+		<div class="panel-body" id="Imagem">
 			<form class="form-horizontal" th:object="${emprestimo}" th:action="@{/emprestimo/save}" method="POST" style="margin: 10px">
 				<div class="form-group">
  					<fieldset>
@@ -26,24 +40,33 @@
 						</div> 					
 						<div class="form-group row">
 						    <div class="col-md-1">
+						        <label>Registro Empréstimo</label>
 						        <input type="text" class="form-control input-sm" id="id" th:field="*{id}" readOnly="readonly"/>
-						    </div>
+						   </div>
 						 </div>
 						<div class="form-group row">                                                          
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('dtempres')}? 'has-error'">
 							    <label>Data do Empréstimo</label>
-							    <input type="text" class="form-control input-sm" th:field="*{dtempres}" autofocus="autofocus"  maxlength="50"/>
+							    <input placeholder="Informe a Data do Empréstimo..."  type="date" class="form-control input-sm" th:field="*{dtempres}" pattern="[0-9]{2}\/[0-9]{2}\/[0-9]{4}$" autofocus="autofocus" required="required" minlength="8" maxlength="8" />
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:123456789</i></font>
+							     <script type="text/javascript">
+                                   $("#dtempres").mask("00/00/0000");
+                                </script>
 							</div>
 						</div>
 						
 					    <div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('dtdev')}? 'has-error'">
 								<label>Data de Devolução</label> 
-								<input type="text" class="form-control input-sm" th:field="*{dtdev}" autofocus="autofocus" maxlength="50" />
+								<input placeholder="Informe a Data da Devolução..."  type="date" class="form-control input-sm" th:field="*{dtdev}" pattern="[0-9]{2}\/[0-9]{2}\/[0-9]{4}$" required="required" autofocus="autofocus" minlength="8" maxlength="8" />
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:123456789</i></font> 
+							    <script type="text/javascript">
+                                   $("#dtdev").mask("00/00/0000");
+                                </script>
 							</div>
 						</div>	
 						
-						<div class="form-group row">
+					 	<div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('livro')}? 'has-error'">
 							<label>Livro Emprestado</label> 
 								<select id="livro" th:field="*{livro}" class="form-control input-sm">
@@ -53,21 +76,22 @@
 						    </div>
 						</div>		
 						
-						<div class="form-group row">
+						  <div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('pessoa')}? 'has-error'">
 							<label>Pessoa Responsável</label> 
-								<select id="pessoa" th:field="*{pessoa}" class="form-control input-sm">
-								    <option value="">Selecione a Pessoa</option>
-								    <option th:each="pessoa : ${pessoas}"  th:value="${pessoa.rg}" th:text="${pessoa.nome}" selected="selected"></option>
+								
+								<select id="pessoa"  th:field="*{pessoa}" class="form-control input-sm" >
+								    <option value="" >Selecione a Pessoa</option>
+								    <option th:each="pessoa : ${pessoas}"  th:value="${pessoa.id}" th:text="${pessoa.nome}"  selected="selected"></option>
 							    </select>
 						    </div>
-						</div>				
+						</div>	
 				  </fieldset>
 				</div>
 				
 				<div class="form-group row">
-					<button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-					<a th:href="@{/emprestimo/}" class="btn btn-sm btn-default">Cancelar</a>
+					<button type="submit" class="btn btn-sm btn-primary"><b>Salvar</b></button>
+					<a th:href="@{/emprestimo/}" class="btn btn-sm btn-default"><b>Cancelar</b></a>
 				</div>
 			</form>
 		</div>
