--- a/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/pessoa.html
+++ b/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/pessoa.html
@@ -8,7 +8,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body bgcolor="lightgray">
+<body>
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<strong>Pessoa</strong>
@@ -18,7 +18,8 @@
 				<table class="table table-sm table-striped table-hover table-bordered">
 					<thead>
 						<tr>
-							<th>RG</th>
+						    <th>Registro</th>
+							<th>CPF</th>
 							<th>Nome</th>
 							<th>Endereço</th>
 							<th>Telefone</th>
@@ -28,7 +29,8 @@
 					</thead>
 					<tbody>
 						<tr th:each="pessoa : ${pessoa}">
-							<td th:text="${pessoa.rg}"></td>
+						    <td th:text="${pessoa.id}"></td>
+							<td th:text="${pessoa.cpf}"></td>
 							<td th:text="${pessoa.nome}"></td>
 							<td th:text="${pessoa.endereco}"></td>
 							<td th:text="${pessoa.telefone}"></td>
@@ -36,8 +38,8 @@
 							
 							<td>
 								<div class="btn-group pull-right">
-							   		<a class="btn btn-sm btn-primary" th:href="@{/pessoa/edit/{RG}(rg=${pessoa.rg})}" >Editar</a>
-							   		<a class="delete btn btn-sm btn-danger" th:href="@{/pessoa/delete/{RG}(rg=${pessoa.rg})}">Excluir</a>
+							   		<a class="btn btn-sm btn-warning" th:href="@{/pessoa/edit/{id}(id=${pessoa.id})}" ><b>Editar</b></a>
+							   		<a class="delete btn btn-sm btn-danger" th:href="@{/pessoa/delete/{id}(id=${pessoa.id})}"><b>Excluir</b></a>
 							   </div>
 							</td>
 						</tr>
@@ -46,7 +48,8 @@
 			</div>
 		</div>
 		<div class="panel-footer">
-			<a class="btn btn-sm btn-success" th:href="@{/pessoa/add/}" >Adicionar</a>
+			<a class="btn btn-sm btn-info" th:href="@{/pessoa/add/}" ><b>Adicionar</b></a>
+		    <a class="btn btn-sm btn-default" th:href="@{/menu/}" ><b>Menu Principal</b></a>
 		</div>
 	</div>
 </body>
