--- a/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/pessoaAdd.html
+++ b/Biblioteca/Implementação Projeto Biblioteca/src/main/resources/templates/pessoaAdd.html
@@ -7,13 +7,30 @@
 	<title>Cadastro de Pessoa</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    
+    <style type="text/css">
+      #Imagem{ 
+    
+    	 background: url('https://images8.alphacoders.com/379/379448.jpg') no-repeat; 
+    	right:auto;
+    	left:auto;
+    	heigth:auto;
+    	width:auto;
+    	background-size: auto;
+      }
+    </style>
+
 </head>
-<body bgcolor="lightgray">
+<body >
+	
+   
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<strong>Cadastro de Pessoa</strong>
 		</div>
-		<div class="panel-body">
+		<div class="panel-body" id="Imagem">
 			<form class="form-horizontal" th:object="${pessoa}" th:action="@{/pessoa/save}" method="POST" style="margin: 10px">
 				<div class="form-group">
  					<fieldset>
@@ -25,44 +42,98 @@
 							</div>
 						</div> 					
 						
+						<div class="form-group row">
+						    <div class="col-md-1">
+						        <label>Registro de Pessoa</label>
+						        <input type="text" class="form-control input-sm" id="id" th:field="*{id}" readOnly="readonly"/>
+						        
+						    </div>
+						 </div>
+						
 						<div class="form-group row">                                                          
-							<div class="col-md-4" th:classappend="${#fields.hasErrors('rg')}? 'has-error'">
-							    <label>RG</label>
-							    <input type="text" class="form-control input-sm" th:field="*{rg}" autofocus="autofocus"  maxlength="12"/>
+							<div class="col-md-4" th:classappend="${#fields.hasErrors('cpf')}? 'has-error'">
+							    <label>CPF</label>
+							    <input placeholder="Informe um CPF todos os Digitos Juntos..."  type="text" pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$" class="form-control input-sm" th:field="*{cpf}"  required="required" />
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:123456789</i></font>
+							    <script type="text/javascript">
+                                   $("#cpf").mask("000.000.000-00");
+                                </script>
 							</div>
 						</div>
-						<div class="form-group row">
+					    <div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('nome')}? 'has-error'">
-								<label>Nome</label> 
-								<input type="text" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus" maxlength="50" />
+								<label><i>Nome</i></label> 
+								<input style="text-transform: capitalize;" pattern="((\b[A-zÀ-ú']{2,40}\b)\s*){2,}$" type="text" class="form-control input-sm" th:field="*{nome}" autofocus="autofocus" required="required" placeholder="Informe um Nome..." minlength="5" maxlength="50" />
+							     <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:AaBbCc...</i></font>
+							      <script type="text/javascript">
+							          $(function(){
+							    	     $("#nome").focusout(function(){
+							    	         var quebra = $(this).val().trim().split(/\s{1,}/);
+							    	        
+							    	           for(var i in quebra){
+							    	               quebra[i] = quebra[i].substr(0, 1).toUpperCase() + quebra[i].substring(1, quebra[i].length); 
+							    	           }
+							    	        
+							    	            var nome = "";
+							    	            for(var i in quebra)
+							    	              nome = nome + ' ' + quebra[i];
+							    	        
+							    	             $(this).val(nome.trim());
+							    	         });
+							    	      });
+							      </script>
 							</div>
 						</div>
 						<div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('endereco')}? 'has-error'">
-								<label>Endereço</label> 
-								<input type="text" class="form-control input-sm" th:field="*{endereco}" autofocus="autofocus" maxlength="50"/>
-							</div>
+								<label><i>Endereço</i></label> 
+								<input type="text" style="text-transform: capitalize;" pattern="((\b[A-zÀ-ú'0-9]{2,40}\b)\s*){2,}$"  class="form-control input-sm" th:field="*{endereco}" autofocus="autofocus" placeholder="Informe um Endereço..." minlength="5" maxlength="100"/>
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:AaBb123...</i></font>
+							    <script type="text/javascript">
+							          $(function(){
+							    	     $("#nome").focusout(function(){
+							    	         var quebra = $(this).val().trim().split(/\s{1,}/);
+							    	        
+							    	           for(var i in quebra){
+							    	               quebra[i] = quebra[i].substr(0, 1).toUpperCase() + quebra[i].substring(1, quebra[i].length); 
+							    	           }
+							    	        
+							    	            var nome = "";
+							    	            for(var i in quebra)
+							    	              nome = nome + ' ' + quebra[i];
+							    	        
+							    	             $(this).val(nome.trim());
+							    	         });
+							    	      });
+							      </script>
+							 </div>
 						</div>
 					    <div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('telefone')}? 'has-error'">
-								<label>Telefone</label> 
-								<input type="text" class="form-control input-sm" th:field="*{telefone}" autofocus="autofocus" maxlength="50" />
+								<label><i>Telefone</i></label> 
+								<input pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}$" type="tel" class="form-control input-sm" th:field="*{telefone}" autofocus="autofocus" required="required"  placeholder="Informe um Telefone celular ou Fixo (DD)123456..." minlength ="10" maxlength="11" />
+							    <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:123456789</i></font>
+							     <script type="text/javascript">
+							       $("#telefone").mask("(00) 0000-00000");
+							     </script>
 							</div>
 						</div>	
 						<div class="form-group row">
 							<div class="col-md-4" th:classappend="${#fields.hasErrors('email')}? 'has-error'">
-								<label>E-Mail</label> 
-								<input type="text" class="form-control input-sm" th:field="*{email}" autofocus="autofocus" maxlength="50"/>
+								<label><i>E-Mail</i></label> 
+								<input pattern="[a-z0-9._%+-]+@[a-z.-]+\.[a-z]{2,4}$"  type="email" class="form-control input-sm" th:field="*{email}"  autofocus="autofocus" required="required" placeholder="Informe um E-mail..." maxlength="100"/>
+							      <font color="#8B0000" size="2px"><i>Digitos Válidos Ex:nome@nomeprovedor.com</i></font>
 							</div>
 						</div>	
 				  </fieldset>
 				</div>
 				<div class="form-group row">
-					<button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-					<a th:href="@{/pessoa/}" class="btn btn-sm btn-default">Cancelar</a>
+					<button type="submit"  class="btn btn-sm btn-primary btn-"><b>Salvar</b></button>
+					<a th:href="@{/pessoa/}" class="btn btn-sm btn-default"><b>Cancelar</b></a>
 				</div>
 			</form>
+			</div>
 		</div>
-	</div>
+	
 </body>
 </html>
